# smolantic_ai

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
examples/: code_agent_example.py  multistep_agent_delegation_story.py  multistep_agent_generic.py
src/smolantic_ai/: __init__.py  _version.py  agent.py  code_agent.py  config.py  example.py  executors.py  logging.py  models.py  multistep_agent.py  prebuilt_tools.py  prompts.py  tool_calling_agent.py
src/smolantic_ai/examples/: example.py
tests/: test_agents.py  test_example.py
